# tx-pkg-aux

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  REPO.bazel  WORKSPACE.bzlmod  compose.yaml  foo  foo2  replace_symlink.py  xmake.lua
demo/: BUILD.bazel  BUILD.wasm.bazel  main.cpp  main_wasm.cpp  run_wasm_demo.sh  simple_log.cpp  simple_log.h
demo/hello-app/: BUILD.bazel  main.cpp
demo/hello-boot/: BUILD.bazel  main.cpp  sublib.cpp  sublib.h
demo/hello-http/: BUILD.bazel  main.cpp
demo/hello-log/: .env  BUILD.bazel  main.cpp
demo/mix/exec-asio/: BUILD.bazel  main.cpp
demo/mix/exec-http/: BUILD.bazel  main.cpp
demo/mix/rtt-syntm/: BUILD.bazel  CommandSource.h  Config.h  DemoNode.h  PeerView.h  Protocol.h  RttBridge.h  SimHandler.h  SyncAgent.h  main.cpp
demo/pkg/: README.md
demo/pkg/app/: BUILD.bazel  main.cpp
demo/pkg/app-asio/: BUILD.bazel  main.cpp
demo/pkg/app-capy/: BUILD.bazel  main.cpp
demo/pkg/app-exec/: BUILD.bazel  main.cpp
demo/pkg/asio/: BUILD.bazel  main.cpp
demo/pkg/boot/: BUILD.bazel  main.cpp
demo/pkg/exec/: BUILD.bazel  main.cpp
demo/pkg/fs/: BUILD.bazel  main.cpp
demo/pkg/http/: BUILD.bazel  main.cpp
demo/pkg/log/: BUILD.bazel  main.cpp
demo/pkg/rtt/: BUILD.bazel  Client.cpp  RttBridge.h  Server.cpp
demo/try/: README.md
demo/try-loop/: BUILD.bazel  main.cpp
demo/try/capy/: BUILD.bazel  README.md  main_inline.cpp  main_loop.cpp
demo/try/corosio/: BUILD.bazel  main.cpp
demo/try/cpp/: README.md
demo/try/datachannel/: BUILD.bazel  README.md  copy-paste.cpp  wsclient.cpp
demo/try/exec/: BUILD.bazel  hello_coro.cpp  hello_loop.cpp  hello_opstate.cpp  hello_read.cpp  hello_service.cpp  hello_service_pure.cpp  hello_world.cpp
demo/try/http-nghttp2/: BUILD.bazel
demo/try/http-wasm-fetch/: BUILD.bazel  main.cpp
demo/try/loop/: BUILD.bazel  main.cpp
modules/lwlog/: BUILD.bazel  EXAMPLES.md  MODULE.bazel  README.md  lwlog_ext.bzl
pkg/asio/: BUILD.bazel  rules.bzl
pkg/asio/Asio/: AsioDomain.cpp  AsioDomain.h  AsioPoller.cpp  AsioPoller.h
pkg/log/: BUILD.bazel
pkg/log/Log/: Exception.cpp  Exception.h  Log.cpp  Log.h  Sep.h  Sink.cpp  Sink.h  StartupSink.cpp  StartupSink.h
repo/: BUILD.bazel  capy.BUILD.bazel  corosio.BUILD.bazel  corosio.patch  cppalliance.beast2.BUILD.bazel  cppalliance.capy.BUILD.bazel  cppalliance.corosio.BUILD.bazel  cppalliance.http-clock_cast.patch  cppalliance.http.BUILD.bazel  datachannel.BUILD.bazel  http.BUILD.bazel  stdexec.BUILD.bazel
repo/boost_asio_wrapped/: rules.bzl
repo/patches/: README.md  boost.asio-1.90.0.bcr.1.patch
src/: BUILD.bazel  test_main.cpp
src/Boot/: Boot.cpp  Boot.h  Build.cpp  Build.h
src/Log/: Log.cpp  Log.h
src/boost_asio_wrapped/: BUILD.bazel  rules.bzl
src/pkg-app/: BUILD.bazel
src/pkg-app-asio/: BUILD.bazel
src/pkg-app-asio/App/: Domain.cpp  Domain.h
src/pkg-app/App/: AsioContext.cpp  AsioContext.h  Domain.cpp  Domain.h
src/pkg-app/Async/: ThreadSafety.h
src/pkg-app/Coro/: Domain.cpp  Domain.h  Task.h
src/pkg-boot/: BUILD.bazel
src/pkg-boot/Boot/: Boost.Support.cpp  Boot.DefaultInit.cpp  Boot.LogHeader.cpp  Boot.SetupAbortHandlers.cpp  Boot.cpp  Boot.h  Build.cpp  Build.h  CliArgs.cpp  CliArgs.h
src/pkg-build/: BUILD.bazel
src/pkg-fs/: BUILD.bazel
src/pkg-fs/Fs/: Drive.h  NativeDrive.cpp  NativeDrive.h  OverlayDrive.cpp  OverlayDrive.h  RunfilesDrive.cpp  RunfilesDrive.h  System.cpp  System.h
src/pkg-http/: BUILD.bazel
src/pkg-http/Http/: ILiteClient.h  LiteClient.cpp  LiteClient.h  SimpleClient.cpp  SimpleClient.h
src/pkg-log/: BUILD.bazel
src/pkg-log/Log/: Level.h  Log.cpp  Log.h  Scope.h  Sink.cpp  Src.h  Time.cpp  Time.h
src/pkg/app/: BUILD.bazel
src/pkg/app-asio/: BUILD.bazel
src/pkg/app-capy/: BUILD.bazel
src/pkg/app-exec/: BUILD.bazel  README.md
src/pkg/asio/: BUILD.bazel
src/pkg/async/: BUILD.bazel
src/pkg/boot/: BUILD.bazel
src/pkg/coro/: BUILD.bazel
src/pkg/exec/: BUILD.bazel  README.Domain.md  README.md
src/pkg/fs/: ANDROID_ASSET_IMPLEMENTATION.md  BUILD.bazel
src/pkg/http/: BUILD.bazel
src/pkg/log/: BUILD.bazel
test/: BUILD.bazel  boot_test.cpp  build_test.cpp  call_test.cpp  fs_test.cpp  log_test.cpp
test/app/: BUILD.bazel  app_test.cpp  async_mutex_test.cpp  fail_app.cpp
test/boot/: BUILD.bazel  boot_test.cpp  fail_boot.cpp
test/cc/: BUILD.bazel  README.md  cc_src.cpp  fail_test.cpp  sh_wrapper.bat  sh_wrapper.cmd  sh_wrapper.sh
test/env/: BUILD.bazel  py_test.py  sh_gen.sh  sh_test.sh
test/fs/: BUILD.bazel  fs_test.cpp
test/http/: BUILD.bazel  client_test.cpp  http_client_test.cpp  http_test_runner.py
test/http-stub/: BUILD.bazel  http_client.py  http_integration_test.py  http_server.py
test/http/integration_bridge/: BUILD.bazel  integration_bridge.py
test/http/stub/: BUILD.bazel  integration_test_runner.py  stub_client_test.py  stub_integration_test.py  stub_server.py
test/integration/: BUILD.bazel  integration.bzl
test/integration/bridge/: BUILD.bazel  integration_bridge.py
test/log/: BUILD.bazel
test/perf/: BUILD.bazel
test/pkg/: WASM_TESTING.md
test/pkg/app/: BUILD.bazel  WASM_TESTING.md  app_test.cpp  async_mutex_test.cpp  coro_domain_test.cpp
test/pkg/app-asio/: BUILD.bazel  WASM_TESTING.md  app_asio_domain_test.cpp  fail_app.cpp
test/pkg/app-capy/: BUILD.bazel  coro_domain_test.cpp
test/pkg/app-exec/: BUILD.bazel  TestRunner.h  delay_test.cpp  domain_test.cpp  pure_loop_context_test.cpp  run_task_test.cpp  timed_loop_context_test.cpp
test/pkg/asio/: AsioDomain.App.Test.cpp  AsioDomain.Test.cpp  AsioPoller.Test.cpp  BUILD.bazel  CoroAsserts.h  app_asio_domain_test.cpp
test/pkg/async/: BUILD.bazel
test/pkg/boot/: BUILD.bazel  BuildDescription.Test.cpp  boot_test.cpp
test/pkg/exec/: BUILD.bazel  Domain.App.Test.cpp  Domain.Error.Test.cpp  Domain.Timed.Test.cpp  ExecTestReceivers.h  RunTask.Test.cpp  TimedLoopContext.Test.cpp  run_task_test.cpp
test/pkg/fs/: BUILD.bazel  Drive.NativePath.Test.cpp  Drive.Read.Embedded.Test.cpp  Drive.Read.Test.cpp  Path.Test.cpp  fs_embedded_test.cpp  (+4 more)
(+349 files in other folders)
