# Package groups for visibility control
package_group(
    name = "internal",
    packages = [
        "//...",  # Include the entire project including root package
    ],
)

# Public API aliases for external consumption
alias(
    name = "log",
    actual = "//src:pkg-log",
    visibility = ["//visibility:public"],
)

# Internal aliases (for development/testing)
alias(
    name = "demo",
    actual = "//demo:hello-log",
    visibility = ["//:internal"],
)