# Package groups for visibility control
package_group(
    name = "internal",
    packages = [
        "//...",  # Include the entire project including root package
    ],
)

package(
    default_visibility = ["//visibility:public"],
    features = [
        # "thin_lto",  # Enable Thin LTO
        # "-legacy_whole_archive",  # Disable legacy whole archive
    ],
)

# Public API aliases for external consumption
alias(
    name = "pkg-log",
    actual = "//src/pkg-log:lib",
    #visibility = ["//visibility:public"],
)
alias(
    name = "pkg-boot",
    actual = "//src/pkg-boot:lib",
    #visibility = ["//visibility:public"],
)

# Internal aliases (for development/testing)
alias(
    name = "demo",
    actual = "//demo:hello-log",
    visibility = ["//:internal"],
)
