"""Auxiliary targets package"""

module(
    name = "tx-pkg-aux",
    version = "0.0.0",
)

#TODO: setup Renovate to auto-update https://github.com/renovatebot/renovate
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "emsdk", version = "4.0.17")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "rules_nodejs", version = "6.7.3", dev_dependency = True)

# Hedron's Compile Commands Extractor for Bazel
# - https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # Using forked version to workaround an issue w/ header-only library https://github.com/hedronvision/bazel-compile-commands-extractor/issues/199
    #commit = "abb61a688167623088f8768cc9264798df6a9d10",
    #remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "359a657680aa74d2a70240bb310c1636601e0af8",
    remote = "https://github.com/vimarsh6739/bazel-compile-commands-extractor.git",
)

# tx useful rules and tools
bazel_dep(name = "tx-kit-ext")  # not private registry yet
git_override(
    module_name = "tx-kit-ext",
    remote = "https://github.com/nick-dodonov/tx-kit-ext.git",
    tag = "v/0.2.8",
)

# src dependencies
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "ada-url", version = "3.4.2")
bazel_dep(name = "boost.throw_exception", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.asio", version = "1.89.0.bcr.1.1-tx.1")  # private registry
bazel_dep(name = "boost.beast", version = "1.89.0.bcr.1")
bazel_dep(name = "boringssl", version = "0.20251124.0")
bazel_dep(name = "nghttp2", version = "1.65.0")
bazel_dep(name = "gsl", version = "4.2.1")

# test dependencies
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)

# Configure emscripten deps extension to download and register toolchains
emscripten_deps = use_extension("@emsdk//:emscripten_deps.bzl", "emscripten_deps")
use_repo(emscripten_deps, "emscripten_bin_linux")
use_repo(emscripten_deps, "emscripten_bin_linux_arm64")
use_repo(emscripten_deps, "emscripten_bin_mac")
use_repo(emscripten_deps, "emscripten_bin_mac_arm64")
use_repo(emscripten_deps, "emscripten_bin_win")

# Configure emscripten cache
emscripten_cache = use_extension("@emsdk//:emscripten_cache.bzl", "emscripten_cache")
use_repo(emscripten_cache, "emscripten_cache")

# Get nodejs from rules_nodejs
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.18.0")
use_repo(node, "nodejs")

# Register emscripten toolchains
register_toolchains(
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_win",
    # Custom toolchain for Windows ARM64 (uses x86_64 binaries via emulation)
    "//toolchains/emscripten:cc-toolchain-wasm-win_arm64",
)

# Register Python runtime environment toolchain for dev-only use
# This toolchain has no platform constraints and works with any target platform (including WASM)
# It's sufficient for running Python build tools but cannot build C extensions
register_toolchains(
    # https://rules-python.readthedocs.io/en/latest/toolchains.html#runtime-environment-toolchain
    "@rules_python//python/runtime_env_toolchains:all",
)
