"""Auxiliary targets package"""

module(
    name = "tx-pkg-aux",
    version = "0.0.0",
)

#TODO: setup Renovate to auto-update https://github.com/renovatebot/renovate
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "emsdk", version = "4.0.17-tx.1")  # private registry (custom version with C++23 support)
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_python", version = "1.8.4")

# Hedron's Compile Commands Extractor for Bazel
# - https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # Using forked version to workaround an issue w/ header-only library https://github.com/hedronvision/bazel-compile-commands-extractor/issues/199
    #commit = "abb61a688167623088f8768cc9264798df6a9d10",
    #remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "359a657680aa74d2a70240bb310c1636601e0af8",
    remote = "https://github.com/vimarsh6739/bazel-compile-commands-extractor.git",
)

# tx useful rules and tools
bazel_dep(name = "tx-kit-ext")  # not private registry yet
git_override(
    module_name = "tx-kit-ext",
    remote = "https://github.com/nick-dodonov/tx-kit-ext.git",
    tag = "v/0.2.8",
)

# src dependencies
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "ada-url", version = "3.4.2-tx.1")  # private registry

bazel_dep(name = "boost.throw_exception", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.90.0.bcr.1")

# Local override for development build modifications # TODO: move to private registry when ready
single_version_override(
    module_name = "boost.asio",
    patch_strip = 0,
    patches = ["//repo/patches:boost.asio-1.90.0.bcr.1.patch"],
)

bazel_dep(name = "boringssl", version = "0.20251124.0")
bazel_dep(name = "nghttp2", version = "1.65.0")
bazel_dep(name = "gsl", version = "4.2.1")

# test dependencies
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)

# Register Python runtime environment toolchain for dev-only use
# This toolchain has no platform constraints and works with any target platform (including WASM)
# It's sufficient for running Python build tools but cannot build C extensions
# Another variant to add --extra_toolchains=@bazel_tools//tools/python:autodetecting_toolchain
register_toolchains(
    # https://rules-python.readthedocs.io/en/latest/toolchains.html#runtime-environment-toolchain
    "@rules_python//python/runtime_env_toolchains:all",
)

# required for @rules_android//:arm64-v8a in uni.bazelrc #TODO: try declare platforms in kit and check only its deps are enough
bazel_dep(name = "rules_android", version = "0.7.1")

################################################################
# new cppalliance tries (corosio and http) - TODO: make private registry modules when ready
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "cppalliance.capy",
    build_file = "//repo:cppalliance.capy.BUILD.bazel",
    commit = "4138e90130c79272c49ca75c40bb30e3b9a502b2",  # branch = "develop",
    remote = "https://github.com/cppalliance/capy.git",
)

git_repository(
    name = "cppalliance.corosio",
    build_file = "//repo:cppalliance.corosio.BUILD.bazel",
    commit = "8199f3c82d72264edbdb47c4918bec4fb3cdd884",  # branch = "develop",
    patch_args = ["-p0"],
    patches = ["//repo:cppalliance.corosio.patch"],
    remote = "https://github.com/cppalliance/corosio.git",
)

_boost_version = "1.90.0.bcr.1"
bazel_dep(name = "boost.config", version = _boost_version)
bazel_dep(name = "boost.system", version = _boost_version)
bazel_dep(name = "boost.core", version = _boost_version)
bazel_dep(name = "boost.optional", version = _boost_version)
bazel_dep(name = "boost.static_assert", version = _boost_version)
bazel_dep(name = "boost.url", version = _boost_version)
bazel_dep(name = "boost.json", version = _boost_version)
git_repository(
    name = "cppalliance.http",
    build_file = "//repo:cppalliance.http.BUILD.bazel",
    commit = "3ae8ba20a2990c8508126177e66c57b3f90e9a99",  # branch = "develop",
    patch_args = ["-p0"],
    patches = ["//repo:cppalliance.http-clock_cast.patch"],
    remote = "https://github.com/cppalliance/http.git",
)

bazel_dep(name = "boost.assert", version = _boost_version)
# git_repository(
#     name = "cppalliance.beast2",
#     build_file = "//repo:cppalliance.beast2.BUILD.bazel",
#     commit = "c0491ed93e6f0714a848e3b7d5ecce73874e32f3",  # branch = "develop",
#     # patch_args = ["-p1"],
#     # patches = ["//repo:cppalliance.beast2-any_router.patch"],
#     remote = "https://github.com/cppalliance/beast2.git",
# )
local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")
local_repository(
    name = "cppalliance.beast2",
    path = "/Users/rix/p/t/cppalliance/beast2",
)
