load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "hello-log",
    srcs = ["hello-log/main.cpp"],
    copts = [
        "-std=c++20",
        "-fno-exceptions",
    ],
    deps = ["//src:pkg-log"],
    visibility = ["//:internal"],
)

tx_binary(
    name = "hello-boot",
    srcs = ["hello-boot/main.cpp"],
    copts = ["-std=c++20"],
    deps = ["//src:pkg-boot"],
    visibility = ["//:internal"],
)
