load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "cppalliance.capy",
    srcs = glob([
        "src/**/*.cpp",
        "src/**/*.hpp",
    ]),
    hdrs = glob(["include/**/*.hpp"]),
    cxxopts = select({
        "//conditions:default": ["-std=c++23"],
        "@platforms//os:windows": ["/std:c++latest"],
    }),
    features = [
        "exceptions",  # force exceptions on wasm toolchain (capy doesn't support compiling w/o exceptions)
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
)
