load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "cppalliance.capy",
    srcs = glob([
        "src/**/*.cpp",
        "src/**/*.hpp",
    ]),
    hdrs = glob(["include/**/*.hpp"]),
    cxxopts = select({
        "//conditions:default": [
            "-std=c++23",
            "-fexceptions",  # Corosio requires exception handling to work properly
            "-Wno-non-virtual-dtor",  # execution_context.hpp:259:16: warning: 'impl' has virtual functions but non-virtual destructor [-Wnon-virtual-dtor]
        ],
        "@platforms//os:windows": [
            "/std:c++latest",
        ],
    }),
    features = [
        "exceptions",   # force exceptions on wasm toolchain (capy doesn't support compiling w/o exceptions)
        "use_pthreads", # capy's thread_pool requires pthreads
    ],
    # includes = ["include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
