load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:private"],
)

# https://github.com/bazel-contrib/rules_foreign_cc/blob/main/docs/README.md#cmake
cmake(
    name = "datachannel",
    lib_source = ":all_srcs",
    env = {
        #TODO: determine optimal value for parallel build
        "CMAKE_BUILD_PARALLEL_LEVEL": "12",  # because default generator is -G 'Unix Makefiles' #TODO: try Ninja generator instead
    },
    targets = ["datachannel"],
    generate_args = [
        "-DBUILD_SHARED_LIBS=OFF",
    ],
    out_include_dir = "include",
    out_static_libs = select({
        "//conditions:default": [
            "libdatachannel.a",
            "libjuice.a",
            "libsrtp2.a",
            "libusrsctp.a",
        ],
    }),
    visibility = ["//visibility:public"],
)
