load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "http",
    srcs = glob([
        "src/**/*.cpp",
        "src/**/*.hpp",
    ]),
    hdrs = glob(["include/**/*.hpp"]),
    cxxopts = select({
        "//conditions:default": ["-std=c++23"],
        "@platforms//os:windows": ["/std:c++latest"],
    }),
    features = [
        "exceptions",  # force exceptions on wasm toolchain (capy doesn't support compiling w/o exceptions)
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@capy",

        "@boost.config",
        "@boost.system",
        "@boost.core",
        "@boost.optional",
        "@boost.static_assert",
        "@boost.url",
        "@boost.json",
    ]
)
