load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "pkg-log",
    srcs = ["Log/Log.cpp"],
    hdrs = ["Log/Log.h"],
    strip_include_prefix = ".",
    deps = ["@lwlog//:lwlog"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pkg-boot",
    srcs = ["Boot/Build.cpp"],
    hdrs = ["Boot/Build.h"],
    strip_include_prefix = ".",
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)
