load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "pkg-log",
    srcs = ["Log/Log.cpp"],
    hdrs = ["Log/Log.h"],
    strip_include_prefix = ".",
    deps = ["@lwlog//:lwlog"],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pkg-boot",
    srcs = glob(["Boot/*.cpp"]),
    hdrs = glob(["Boot/*.h"]),
    strip_include_prefix = ".",
    copts = ["-std=c++20"],
    deps = [
        ":pkg-log",
    ],
    visibility = ["//visibility:public"],
)
