load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

package(
    default_visibility = ["//visibility:public"],
    features = [
        # "thin_lto",  # Enable Thin LTO
        # "-legacy_whole_archive",  # Disable legacy whole archive
    ],
)

tx_library(
    name = "pkg-log",
    srcs = ["Log/Log.cpp"],
    hdrs = ["Log/Log.h"],
    strip_include_prefix = ".",
    deps = ["@lwlog"],
)

tx_library(
    name = "pkg-boot",
    srcs = glob(["Boot/*.cpp"]),
    hdrs = glob(["Boot/*.h"]),
    strip_include_prefix = ".",
    deps = [":pkg-log"],
)
