load("@tx-kit-ext//rules/build:tx_test.bzl", "tx_test")

tx_test(
    name = "log",
    srcs = ["log_test.cpp"],
    deps = [
        "//:pkg-log",
        "@googletest//:gtest_main",
    ],
)

tx_test(
    name = "boot",
    srcs = ["boot_test.cpp"],
    deps = [
        "//:pkg-boot",
        "@googletest//:gtest_main",
    ],
)

tx_test(
    name = "call",
    srcs = ["call_test.cpp"],
    deps = [
        "//:pkg-boot",
        "@google_benchmark//:benchmark",
    ],
)
