load("@tx-kit-ext//rules/build:tx_test.bzl", "tx_test")

filegroup(
    name = "test_data",
    srcs = ["data/test.txt"],
)

tx_test(
    name = "log",
    srcs = ["log_test.cpp"],
    deps = [
        "//src/pkg-log",
        "@googletest//:gtest_main",
    ],
)

tx_test(
    name = "boot",
    srcs = ["boot_test.cpp"],
    deps = [
        "//src/pkg-boot",
        "@googletest//:gtest_main",
    ],
)

tx_test(
    name = "call",
    srcs = ["call_test.cpp"],
    deps = [
        "//src/pkg-boot",
        "@google_benchmark//:benchmark",
    ],
)

tx_test(
    name = "fs",
    srcs = ["fs_test.cpp"],
    data = [":test_data"],
    deps = [
        "//src/pkg-fs",
        "@googletest//:gtest_main",
    ],
)
