load("@tx-kit-ext//rules/build:tx_test.bzl", "tx_test")

tx_test(
    name = "call",
    srcs = ["call_test.cpp"],
    deps = [
        "//src/pkg-boot",
        "@google_benchmark//:benchmark",
    ],
)

tx_test(
    name = "fail",
    srcs = ["fail_test.cpp"],
    deps = [
        "//src/pkg-app",
        "@googletest//:gtest_main",
    ],
    tags = ["manual"],  # Don't run this test automatically, only for manual checks
)
