load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")
load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

package(
    features = [
        # "thin_lto",  # Enable Thin LTO
    ],
)

# sub library with exception handling enabled to demonstrate unhandled exceptions catching
tx_library(
    name = "hello-sublib",
    srcs = ["sublib.cpp"],
    hdrs = ["sublib.h"],
    cxxopts = select({
        "@platforms//os:windows": ["/EHsc"],  # MSVC
        "//conditions:default": ["-fexceptions"],  # Default to GCC/Clang
    }),
    deps = [
        "//src/pkg-log",
    ],
)

tx_binary(
    name = "hello-boot",
    srcs = ["main.cpp"],
    deps = [
        ":hello-sublib",
        "//src/pkg-boot",
    ],
    stamp = 1,  # Enable stamping for build info
)
