load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "hello-http",
    srcs = glob(["**/*.cpp"]),
    #TODO: find a way to specify linkopts by pkg-http dependecy usage
    linkopts = select({
        "@platforms//cpu:wasm32": [
            "-sFETCH=1", # Emscripten Fetch API for EmFetchLiteClient
            "-sASYNCIFY", # Asyncify for JsFetchLiteClient
            #"-sEXPORTED_RUNTIME_METHODS=lengthBytesUTF8,stringToUTF8,UTF8ToString",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//:pkg-app",
        "//src/pkg-http",
    ],
    cxxopts = ["-std=c++23"],
)
