load("@tx-kit-ext//rules/build:tx_binary.bzl", "tx_binary")

tx_binary(
    name = "hello-http",
    srcs = glob(["**/*.cpp"]),
    #TODO: find a way to specify linkopts by pkg-http dependecy usage
    linkopts = select({
        "@platforms//cpu:wasm32": [
            "-sFETCH=1", # Emscripten Fetch API for EmFetchLiteClient
            "-sDEFAULT_LIBRARY_FUNCS_TO_INCLUDE='$dynCall'", # Enable dynCall for calling C++ callbacks from JS in EM_JS functions
            # "-sASYNCIFY", # Asyncify for JsFetchLiteClient https://emscripten.org/docs/porting/asyncify.html
            # "-sALLOW_TABLE_GROWTH", # Calling JavaScript functions as function pointers from C https://emscripten.org/docs/porting/connecting_cpp_and_javascript/Interacting-with-code.html#calling-javascript-functions-as-function-pointers-from-c
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//:pkg-app",
        "//src/pkg-http",
    ],
    cxxopts = ["-std=c++23"],
)
