"""lwlog module for Bazel - builds lwlog from git repository"""

# Универсальный модуль lwlog - версия определяется в использующем модуле
module(
    name = "lwlog",
    version = "master",  # Версия-заглушка, реальная версия приходит из корневого модуля
)

# Объявляем extension в локальном модуле
lwlog_ext = use_extension("//:lwlog_ext.bzl", "lwlog")
use_repo(lwlog_ext, "lwlog_src")
