load("@tx-kit-ext//rules:multi_lib.bzl", "multi_lib")

multi_lib(
    name = "asio",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
    deps = [
        "//repo/boost_asio_wrapped",  # "@boost.asio",
        "//pkg/async",
        "//pkg/log",
        "//pkg/runloop",
    ],
)
