load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

tx_library(
    name = "pkg-app",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        "//src/pkg-boot",
        "@boost.asio//:boost.asio",
    ],
    visibility = ["//visibility:public"],
)
