load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

tx_library(
    name = "pkg-app",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        "//src/pkg-boot",
        "@boost.asio//:boost.asio",
    ],
    linkopts = select({
        "@platforms//cpu:wasm32": [
            "-sASYNCIFY", # required for emscripten_sleep (also allows EM_ASYNC_JS https://emscripten.org/docs/porting/asyncify.html)
        ],
        "//conditions:default": [],
    }),    
    visibility = ["//visibility:public"],
)
