load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

tx_library(
    name = "pkg-boot",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    linkopts = select({
        # TODO: research dbghelp.lib "price" and is it allowed in release builds?
        "@platforms//os:windows": ["-DEFAULTLIB:dbghelp.lib"],
        "//conditions:default": [],
    }),
    deps = [
        "//:pkg-log",
        "@boost.throw_exception//:boost.throw_exception",
    ],
    visibility = ["//visibility:public"],
)
