load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

tx_library(
    name = "pkg-boot",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    linkopts = select({
        # TODO: research dbghelp.lib "price" and is it allowed in release builds?
        "@platforms//os:windows": ["-DEFAULTLIB:dbghelp.lib"],
        "//conditions:default": [],
    }),
    deps = [
        "//:pkg-log",
        "@boost.throw_exception//:boost.throw_exception",

        # https://fuchsia.googlesource.com/fuchsia/+/HEAD/build/bazel/BAZEL_RUNFILES.md
        # Obsolete: 
        #   "@bazel_tools//tools/cpp/runfiles",
        #   as refers to rules_cc: https://github.com/bazelbuild/bazel/blob/master/tools/cpp/runfiles/runfiles.h
        "@rules_cc//cc/runfiles",
    ],
    visibility = ["//visibility:public"],
)
